// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content card examples NovaCategoryCardComponent should render correctly 1`] = `
<div
  id="root1"
>
  <div
    class="v-content-card"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <div
        class="v-gap-6 v-align-items-center v-flex v-flex-row v-pb-8"
        valignitemscenter=""
        vflex=""
        vgap="6"
        vpb="8"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-account v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          id="a-v__icon__internal-1"
          v-icon-visa-account-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            clip-rule="evenodd"
            d="M12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14Z"
            fill-rule="evenodd"
          />
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8ZM12 10C14.7614 10 17 7.76142 17 5C17 2.23858 14.7614 0 12 0C9.23858 0 7 2.23858 7 5C7 7.76142 9.23858 10 12 10Z"
            fill-rule="evenodd"
          />
        </svg>
        <h3
          class="v-typography-overline"
          style="color: var(--palette-default-active);"
          vtypography="overline"
        >
          Category
        </h3>
      </div>
      <h4
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h4>
      <h5
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h5>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <button
          buttoncolor="primary"
          class="v-button"
          type="button"
          v-button=""
        >
          Primary action
        </button>
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v__icon__internal-2"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2.39309 1.00049L1 2.47646L6.21383 8.00049L1 13.5245L2.39309 15.0005L9 8.00049L2.39309 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaClickableCardComponent should render correctly 1`] = `
<div
  id="root2"
>
  <button
    class="v-content-card"
    clickable=""
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <h3
        class="v-content-card-title v-content-card-title-link v-typography-headline-4"
        v-content-card-title=""
        v-content-card-title-link=""
        vtypography="headline-4"
      >
         Headline 
        <svg
          aria-hidden="true"
          class="v-icon-move v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-3"
          v-icon-visa-chevron-link-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M2.39309 1.00049L1 2.47646L6.21383 8.00049L1 13.5245L2.39309 15.0005L9 8.00049L2.39309 1.00049Z"
            fill-rule="evenodd"
          />
        </svg>
      </h3>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline in more detail.
      </p>
    </div>
  </button>
</div>
`;

exports[`Content card examples NovaClickableCardDisabledComponent should render correctly 1`] = `
<div
  id="root3"
>
  <button
    aria-disabled="true"
    class="v-content-card"
    clickable=""
    disabled=""
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        <a
          aria-disabled="true"
          class="v-content-card-title-link"
          v-content-card-title-link=""
        >
          Headline
        </a>
        <svg
          aria-hidden="true"
          class="v-icon-move v-icon v-icon-security-lock v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v__icon__internal-4"
          v-icon-visa-security-lock-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M7 8.99609H9V11.9961H7V8.99609Z"
          />
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M8 0C5.79086 0 4 1.79086 4 4V5H1V16H15V5H12V4C12 1.79086 10.2091 0 8 0ZM10 5V4C10 2.89543 9.10457 2 8 2C6.89543 2 6 2.89543 6 4V5H10ZM4 7H3V14H13V7H12H4Z"
            fill-rule="evenodd"
          />
        </svg>
      </h3>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline in more detail.
      </p>
    </div>
  </button>
</div>
`;

exports[`Content card examples NovaCompactCardComponent should render correctly 1`] = `
<div
  id="root4"
>
  <div
    class="v-content-card v-content-card-border-block-end"
    indicator="true"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h3>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v__icon__internal-5"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2.39309 1.00049L1 2.47646L6.21383 8.00049L1 13.5245L2.39309 15.0005L9 8.00049L2.39309 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaCompactDashboardCardComponent should render correctly 1`] = `
<div
  id="root0"
>
  <div
    class="v-content-card"
    style="inline-size: 500px;"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <div
        class="v-align-items-center v-flex v-flex-row v-justify-content-between"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
      >
        <h3
          class="v-content-card-title v-typography-headline-4"
          v-content-card-title=""
          vtypography="headline-4"
        >
          <span
            class="v-align-self-end v-flex v-flex-row"
            valignselfend=""
            vflex=""
          >
            Headline
          </span>
        </h3>
      </div>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <span
          class="v-typography-display-2"
          style="color: var(--palette-messaging-text-positive);"
          vtypography="display-2"
        >
           0,000 
        </span>
        <div
          class="v-gap-4 v-align-content-end v-align-items-center v-flex v-flex-col v-mt-8"
          valigncontentend=""
          valignitemscenter=""
          vflex=""
          vflexcol=""
          vgap="4"
          vmt="8"
        >
          <svg
            aria-hidden="false"
            aria-labelledby="compact-dashboard-title compact-dashboard-label"
            class="v-icon v-icon-arrow-up v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v__icon__internal-0"
            v-icon-visa-arrow-up-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <title
              id="compact-dashboard-title"
            >
              increasing value
            </title>
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M15.7042 7.79744L7.99712 0.090332L0.290009 7.79744L1.70422 9.21165L6.99712 3.91876V16.0045H8.99712V3.91876L14.29 9.21165L15.7042 7.79744Z"
              fill-rule="evenodd"
            />
            <defs>
              <clippath>
                <rect
                  height="16"
                  transform="translate(0 0.000488281)"
                  width="16"
                />
              </clippath>
            </defs>
          </svg>
          <span
            aria-hidden="true"
            id="compact-dashboard-label"
          >
            Label
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaDefaultCardComponent should render correctly 1`] = `
<div
  id="root5"
>
  <div
    class="v-content-card"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h3>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <button
          buttoncolor="primary"
          class="v-button"
          type="button"
          v-button=""
        >
          Primary action
        </button>
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v__icon__internal-6"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2.39309 1.00049L1 2.47646L6.21383 8.00049L1 13.5245L2.39309 15.0005L9 8.00049L2.39309 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaDefaultDashboardCardComponent should render correctly 1`] = `
<div
  id="root9"
>
  <div
    class="v-content-card"
    style="inline-size: 500px;"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <div
        class="v-gap-6 v-align-items-center v-flex v-flex-row v-pb-8"
        valignitemscenter=""
        vflex=""
        vgap="6"
        vpb="8"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-low v-icon-security-lock v-icon-visa"
          focusable="false"
          height="24"
          id="a-v__icon__internal-13"
          v-icon-visa-security-lock-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M13 20H11V17.83C9.84 17.42 9 16.3 9 15C9 13.35 10.35 12 12 12C13.65 12 15 13.35 15 15C15 16.3 14.16 17.42 13 17.83V20ZM12 14C11.45 14 11 14.45 11 15C11 15.55 11.45 16 12 16C12.55 16 13 15.55 13 15C13 14.45 12.55 14 12 14Z"
          />
          <path
            class="v-icon-primary"
            d="M22 24H2V8H22V24ZM4 22H20V10H4V22ZM17 8H15V5C15 3.35 13.65 2 12 2C10.35 2 9 3.35 9 5V8H7V5C7 2.24 9.24 0 12 0C14.76 0 17 2.24 17 5V8Z"
          />
        </svg>
        <span
          class="v-typography-overline"
          style="color: var(--palette-default-active);"
          vtypography="overline"
        >
           Category 
        </span>
      </div>
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h3>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <img
        alt="a colorful bar chart"
        class="v-content-card-image"
        src="imgs/content-card.png"
        style="inline-size: 100%; block-size: auto; object-fit: contain; background-color: transparent;"
        v-content-card-image=""
      />
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaDefaultWithUIButtonsCardComponent should render correctly 1`] = `
<div
  id="root6"
>
  <div
    class="v-content-card"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <div
        class="v-align-items-center v-flex v-flex-row v-justify-content-between"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
      >
        <h3
          class="v-content-card-title v-typography-headline-4"
          v-content-card-title=""
          vtypography="headline-4"
        >
          <span
            class="v-align-self-end v-flex v-flex-row"
            valignselfend=""
            vflex=""
          >
            Headline
          </span>
        </h3>
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="8"
        >
          <button
            aria-label="Export <Headline>"
            buttoncolor="tertiary"
            buttonsize="small"
            class="v-button v-button-icon v-button-small v-button-tertiary"
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-share v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              id="a-v__icon__internal-7"
              v-icon-visa-share-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-secondary"
                clip-rule="evenodd"
                d="M0 5H4V7H2V14H14V7H12V5H16V16H0V5Z"
                fill-rule="evenodd"
              />
              <path
                class="v-icon-primary"
                clip-rule="evenodd"
                d="M9.07901 3.41421L10.4741 4.70711L12 3.29289L8.76297 0.292894C8.3416 -0.0976312 7.6584 -0.0976312 7.23703 0.292894L4 3.29289L5.52595 4.70711L6.92099 3.41421V12H9.07901V3.41421Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <button
            aria-label="More information about <Headline>"
            buttoncolor="tertiary"
            buttonsize="small"
            class="v-button v-button-icon v-button-small v-button-tertiary"
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-information v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              id="a-v__icon__internal-8"
              v-icon-visa-information-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                clip-rule="evenodd"
                d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16ZM7 5V3H9V5H7ZM6 9H7V10V11H6V13H7H9H10V11H9V10V8V7H6V9Z"
                fill-rule="evenodd"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </div>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <button
          buttoncolor="primary"
          class="v-button"
          type="button"
          v-button=""
        >
          Primary action
        </button>
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v__icon__internal-9"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2.39309 1.00049L1 2.47646L6.21383 8.00049L1 13.5245L2.39309 15.0005L9 8.00049L2.39309 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaIconCardComponent should render correctly 1`] = `
<div
  id="root7"
>
  <div
    class="v-content-card"
    v-content-card=""
  >
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <div
        class="v-flex v-flex-row v-pb-12"
        vflex=""
        vpb="12"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-high v-icon-security-lock v-icon-visa"
          focusable="false"
          height="48"
          id="a-v__icon__internal-10"
          v-icon-visa-security-lock-high=""
          viewBox="0 0 48 48"
          width="48"
        >
          <path
            class="v-icon-secondary"
            clip-rule="evenodd"
            d="M25.1711 33.0061L26.0399 32.1997C26.6331 31.6492 27 30.869 27 30C27 28.3431 25.6569 27 24 27C22.3431 27 21 28.3431 21 30C21 30.869 21.3669 31.6492 21.9601 32.1997L22.8289 33.0061L21.5678 38H26.4322L25.1711 33.0061ZM29 40H19L20.5996 33.6657C19.6157 32.7526 19 31.4482 19 30C19 27.2386 21.2386 25 24 25C26.7614 25 29 27.2386 29 30C29 31.4482 28.3843 32.7526 27.4004 33.6657L29 40Z"
            fill-rule="evenodd"
          />
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M14 12C14 6.47715 18.4772 2 24 2C29.5228 2 34 6.47715 34 12V16H32V12C32 7.58172 28.4183 4 24 4C19.5817 4 16 7.58172 16 12V16H14V12ZM30 18H32H34H36H40V46H8V43H13V41H8V38H13V36H8V33H13V31H8V28H13V26H8V23H13V21H8V18H12H14H16H18H30ZM30 12V16H18V12C18 8.68629 20.6863 6 24 6C27.3137 6 30 8.68629 30 12ZM12 16V12C12 5.37258 17.3726 0 24 0C30.6274 0 36 5.37258 36 12V16H42V48H6V16H12Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h3>
      <hr
        class="v-divider"
        v-divider=""
      />
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v__icon__internal-11"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2.39309 1.00049L1 2.47646L6.21383 8.00049L1 13.5245L2.39309 15.0005L9 8.00049L2.39309 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples NovaImageCardComponent should render correctly 1`] = `
<div
  id="root8"
>
  <div
    class="v-content-card"
    style="inline-size: 50vw;"
    v-content-card=""
  >
    <img
      alt=""
      class="v-content-card-image"
      src="imgs/content-card.png"
      style="inline-size: 100%; block-size: auto; object-fit: contain; overflow: hidden;"
      v-content-card-image=""
    />
    <div
      class="v-content-card-body v-gap-4 v-flex v-flex-col"
      v-content-card-body=""
      vflex=""
      vflexcol=""
      vgap="4"
    >
      <h3
        class="v-content-card-title v-typography-headline-4"
        v-content-card-title=""
        vtypography="headline-4"
      >
        Headline
      </h3>
      <h4
        class="v-content-card-subtitle v-typography-subtitle-3"
        v-content-card-subtitle=""
        vtypography="subtitle-3"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4 v-typography-body-2"
        vpt="4"
        vtypography="body-2"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-gap-12 v-align-items-center v-flex v-flex-row v-flex-wrap v-pt-12"
        valignitemscenter=""
        vflex=""
        vflexwrap=""
        vgap="12"
        vpt="12"
      >
        <button
          buttoncolor="primary"
          class="v-button"
          type="button"
          v-button=""
        >
          Primary action
        </button>
        <a
          class="v-link v-align-items-center v-flex v-flex-row v-link-no-underline"
          href="./components/content-card"
          nounderline=""
          style="--v-link-icon-transformation: none;"
          v-link=""
          valignitemscenter=""
          vflex=""
        >
           Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-link v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v__icon__internal-12"
            v-icon-visa-chevron-link-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2.39309 1.00049L1 2.47646L6.21383 8.00049L1 13.5245L2.39309 15.0005L9 8.00049L2.39309 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;
